[Bug #19833] Fix index underflow at superclasses of `BasicObject`